--- a/Frontend/public/styles.css
+++ b/Frontend/public/styles.css
@@ -1,26 +1,26 @@
 body{
   margin:auto;
+  color:white;
+  background-color: #090909;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
+
 
 /*  Card CSS */
 
 .playIcon{
-  display: none;
   position: absolute;
   top: 75px;
   left: 75px;
-  width:200px;
-}
-
-.card:hover + .playIcon{
-  color:black;
-  display: inline-block;
 }
 
 .card{
   margin:10px;
   background-image: linear-gradient(#5C5C5C ,#000000);
   display: inline-block;
+  position: relative;
   width:180px;
   height:325px;
   border-radius: 5px;
@@ -40,10 +40,114 @@ body{
 
 /* Series container */
 
+.container h1{
+  margin-left: 10px;
+}
 .seriesContainer{
   width:77vw;
   height:360px;
   overflow-x: scroll;
   display: flex;
   flex-direction: row;
+}
+
+
+/* Sidebar container */
+
+.sidebar {
+  color:white;
+  width: 20vw;
+  height:100vh;
+  position:fixed;
+  top:0;
+  left:0;
+  margin: 0;
+  background-color: #000000;
+  border-radius: 0 10px 10px 0;
+  padding: 10px;
+  border: 1px solid #000000;
+  z-index: 0;
+}
+
+.sidebar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar li {
+  margin-bottom: 5px;
+}
+
+.sidebar li a {
+  color: #000;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.sidebar li a:hover {
+  text-decoration: underline;
+}
+
+
+/* mainContainerRight jisme change show hoenge */
+.mainContainerRight {
+  position: fixed;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 100vh;
+  width:77.5vw;
+  top:0;
+  right:0;
+  border-radius: 5px;
+  border-color: #5C5C5C;
+}
+
+
+/* Beautiful Scroll Bar properties */
+::-webkit-scrollbar {
+  width: 20px;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
+}
+
+
+/* Header */
+
+.header-container {
+  Padding:25px 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+}
+
+.header-title { 
+  margin-top: 30px;
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.header-controls {
+  display: flex;
+}
+
+.header-control {
+  margin-right: 10px;
+}
+
+.avatar {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
 }
