--- a/Frontend/public/styles.css
+++ b/Frontend/public/styles.css
@@ -130,6 +130,8 @@ body{
   justify-content: space-between;
   align-items: center;
   height: 50px;
+  background-color: #000000;
+  border-radius: 10px;
 }
 
 .header-title { 
@@ -151,3 +153,59 @@ body{
   height: 35px;
   border-radius: 50%;
 }
+
+/* Music Bar */
+
+.music-player {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #ffffff;
+  color:black;
+  padding: 10px;
+  z-index: 100;
+}
+
+.controls {
+  display: flex;
+  justify-content: space-between;
+}
+
+.play, .pause, .stop {
+  background-color: #000;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.progress {
+  width: 150px;
+}
+
+.volume {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+input[type="range"] {
+  width: 100%;
+  height: 10px;
+  background-color: #ccc;
+  border: none;
+}
+
+.music-player h3 {
+  color:#000;
+  font-size: 20px;
+  margin: 0;
+}
+
+.music-player h4 {
+  color:#000;
+  font-size: 16px;
+  margin: 0;
+}
+
