--- a/Frontend/public/styles.css
+++ b/Frontend/public/styles.css
@@ -6,6 +6,83 @@ body{
   font-weight: 400;
   font-style: normal;
 }
+.headingOnPage{
+  display: flex;
+  flex-direction:row ;
+  justify-content: center;
+}
+.headingLogo{
+  position:relative;
+  top:22px;
+}
+/* css of SignUp page */
+form {
+  width: 375px;
+  margin: 0 auto;
+  margin-top: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+label {
+  display: inline-block;
+  width:150px;
+  font-weight: bold;
+}
+
+input {
+  width: 350px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.radioInput{
+  display: inline-block;
+  width: 40px
+}
+
+button {
+  background-color: rgb(30, 136, 74);
+  color: #fff;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.button-container{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 5px;
+}
+
+.gender-selector {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.gender-selector input {
+  margin-bottom: 10px;
+}
+
+.gender-selector label {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.gender-selector input[type="radio"]:checked + label {
+  color: rgb(40, 151, 87);
+}
+
+.male {
+  background-color: lightblue;
+}
+
+.female {
+  background-color: pink;
+}
 
 
 /*  Card CSS */
@@ -156,56 +233,62 @@ body{
 
 /* Music Bar */
 
-.music-player {
+.controls{
+  display:inline-block;
+  margin:0 auto;
+}
+
+
+.musicBar-container{
+  background-color:#111111;
+  color:white;
   position: fixed;
   bottom: 0;
   left: 0;
-  right: 0;
-  background-color: #ffffff;
-  color:black;
-  padding: 10px;
-  z-index: 100;
+  width:100vw;
+  z-index: 1;
+  height:120px;
+}
+.controlIcon{
+  color:white;
+  border-radius:6px;
+  background-color:#444444;
 }
 
-.controls {
+.volume{
+  position: relative;
+  top:13px;
+  width:100px;
+}
+
+.volumeControlsContainer , .playControlsContainer , .musicPlayerBottom{
+  display:flex;
+  flex-direction: row;
+}
+.volumeControlsContainer {
+  padding: 10px;
+  justify-content: end;
+}
+.musicPlayerBottom{
+  position: relative;
+  bottom:40px;
+  justify-content: center;
+}
+
+.musicPlayerTop{
+  padding-top: 25px;
   display: flex;
   justify-content: space-between;
 }
 
-.play, .pause, .stop {
-  background-color: #000;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  cursor: pointer;
-}
-
-.progress {
-  width: 150px;
-}
-
-.volume {
+.musicPlayerMid{
   display: flex;
   justify-content: center;
-  align-items: center;
 }
-
-input[type="range"] {
-  width: 100%;
-  height: 10px;
-  background-color: #ccc;
-  border: none;
+.musicPlayerMid h3{
+  padding:10px;
+  width: 100px;
 }
-
-.music-player h3 {
-  color:#000;
-  font-size: 20px;
-  margin: 0;
+.sliderContainer{
+  width:50vw;
 }
-
-.music-player h4 {
-  color:#000;
-  font-size: 16px;
-  margin: 0;
-}
-
